--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JS fundamentals examples",
   "main": "./lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "build": "babel . -d lib --ignore node_modules,lib"
   },
   "repository": {
@@ -22,11 +22,14 @@
   },
   "homepage": "https://github.com/teanocrata/jsFundamentals#readme",
   "devDependencies": {
+    "atom-ui-reporter": "0.0.1",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "eslint-config-airbnb-standard": "^1.6.6"
+    "chai": "^4.1.2",
+    "eslint-config-airbnb-standard": "^1.6.6",
+    "mocha": "^5.0.0"
   },
   "dependencies": {
     "yargs": "^10.1.1"
